lamp_intrastructure/4-internetGateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"

  tags {
    Name = "Web Server VPC IG"
  }
}
