lamp_intrastructure/5-routeTable.tf
# Grant the VPC internet access on Internet Gateway
resource "aws_route_table" "r" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  tags {
    Name = "Web Server Public Route Table"
  }
}
