lamp_intrastructure/6-routeTableAssociation.tf
# Associate the public subnet with the route table
resource "aws_route_table_association" "a" {
  subnet_id      = "${aws_subnet.main.id}"
  route_table_id = "${aws_route_table.r.id}"
}
